    under systemd in generated `postinst` script with a dependency
    on `systemd | systemd-tmpfiles` added to `${misc:Depends}`.
    Thanks to Guilhem Moulin for the suggestion.  (Closes: #1013969)
  * dh_installsystemd: Ditto.
  * dh_installinit: Ditto.
  * debhelper-compat-upgrade-checklist.pod: Correct description for
    the addition of dh_installsysusers in compat 14.

  [ Max-Julian Pogner ]
  * Dh_Lib.pm: Remove double semi-colon.  (Closes: #1010591)
  * Dh_Lib.pm: _strip_spaces now explicitly returns undef on undef
    argument.
    (Closes: #1010594)

  [ Andrea Pappacoda ]
  * cmake.pm: Set FETCHCONTENT_FULLY_DISCONNECTED to true.  This
    ensures that the `FetchContent` module does not attempt to
    use internet connection.

  [ Vagrant Cascadian ]
  * debhelper-compat-upgrade-checklist.pod: Update documentation
    for compat 14 change.  (Closes: #1011404)

  [ Ferenc Wágner ]
  * debhelper.pod: Correct link to the new upgrade checklist.
    (Closes: #1012777)

  [ Luca Boccassi ]
  * dh_installman: Avoid false positive language detection on
    shared libs.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #1011256)

 -- Niels Thykier <niels@thykier.net>  Mon, 25 Apr 2022 05:50:27 +0000

debhelper (13.7.1) unstable; urgency=medium

  * debhelper.pod: Fix several typos.  Thanks to Guillem Jover
    for pointing them out and proposing corrections.
  * dh_installalternatives: Correct a file check that caused
    false-positive rejections of valid alternatives files.  Thanks to
    Hiroyuki YAMAMORI for reporting the bug and providing an initial
    patch.  (Closes: #1009844)

 -- Niels Thykier <niels@thykier.net>  Wed, 20 Apr 2022 06:17:57 +0000

debhelper (13.7) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installalternatives: Improve validation of alternative files to
    catch some "obvious" copy-waste mistakes.
  * dh: Invoke dh_installalternatives after dh_link in compat 14 or