@@ -18,6 +18,9 @@ debhelper (13.7.2) UNRELEASED; urgency=medium
   * dh_installinit: Ditto.
   * debhelper-compat-upgrade-checklist.pod: Correct description for
     the addition of dh_installsysusers in compat 14.
+  * meson.pm: Use `meson install` instead of `ninja install` for
+    dh_auto_install in compat 14.  Thanks to Andrea Pappacoda for
+    the suggestion.  (Closes: #1006805)
 
   [ Max-Julian Pogner ]
   * Dh_Lib.pm: Remove double semi-colon.  (Closes: #1010591)
